# crud-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  init.sql
src/: main.rs
src/controller/: task.rs
src/models/: task.rs
